--- a/src/styles/todoitem.css
+++ b/src/styles/todoitem.css
@@ -4,7 +4,10 @@
     max-width: 80%;
     margin: 0 10% 3% 10%;
     border: 1px solid black;
+    border-radius: 5px;
     padding: 2%;
+    box-shadow: inset 0 0 10px #433b2d;
+
 }
 
 .details {
@@ -16,88 +19,118 @@
     margin-left: -4rem;
 }
 
+
+.checkbox {
+  display: inline-flex;
+  cursor: pointer;
+  position: relative;
+  left: -5rem;
+  top: 1rem;
+  margin-right: 2rem;
+}
+
+.checkbox > span {
+  color: #34495E;
+  padding: 0.5rem 0.25rem;
+}
+
+.checkbox > input {
+  height: 25px;
+  width: 25px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  border: 2px solid #dbe1e794;
+  border-radius: 4px;
+  outline: none;
+  transition-duration: 0.3s;
+  background-color: #8c0a0acb;
+  cursor: pointer;
+}
+
+.checkbox > input:checked {
+  border: 1px solid #03ff29;
+  background-color: #345e356b;
+}
+
+.checkbox > input:checked + span::before {
+  content: '\2713';
+  font-weight:bolder;
+  font-size: 29px;
+  display: block;
+  text-align: center;
+  color: #03ff29;
+  position: absolute;
+  left: 0.4rem;
+  bottom: 0.05rem;
+}
+
+.checkbox > input:active {
+  border: 2px solid #34495E;
+}
+
+.todo {
+  position: relative;
+  left: -6rem;
+  text-align: left;
+  font-size: 1rem;
+}
+
+.todo h4 {
+  text-decoration: underline;
+  font-size: larger;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+
+.button-60 {
+  align-items: center;
+  appearance: none;
+  background-color: #fff;
+  border: 1px solid #dbdbdb;
+  border-radius: .375em;
+  box-shadow: none;
+  box-sizing: border-box;
+  color: #363636;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 1rem;
+  height: 2em;
+  justify-content: center;
+  line-height: 1.5;
+  padding: calc(.5em - 1px) 1em;
+  position: relative;
+  text-align: center;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: top;
+  white-space: nowrap;
+  margin-bottom: 1rem;
+}
+
+.button-60:active {
+  border-color: #4a4a4a;
+  outline: 0;
+}
+
+.button-60:focus {
+  border-color: #485fc7;
+  outline: 0;
+}
+
+.button-60:hover {
+  border-color: #b5b5b5;
+}
+
+.button-60:focus:not(:active) {
+  box-shadow: rgba(72, 95, 199, .25) 0 0 0 .125em;
+}
+
 .buttons {
-    position: relative;
-    right: -80%;
+  position: relative;
+  right: -90%;
 }
-
-button {
-    margin-left: 1rem;
-}
-
-
-.switch {
-    --circle-dim: 1.4em;
-    font-size: 17px;
-    position: relative;
-    left: -3rem;
-    display: inline-block;
-    width: 3.5em;
-    height: 2em;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #f5aeae;
-    transition: .4s;
-    border-radius: 30px;
-  }
-  
-  .slider-card {
-    position: absolute;
-    content: "";
-    height: var(--circle-dim);
-    width: var(--circle-dim);
-    border-radius: 20px;
-    left: 0.3em;
-    bottom: 0.3em;
-    transition: .4s;
-    pointer-events: none;
-  }
-  
-  .slider-card-face {
-    position: absolute;
-    inset: 0;
-    backface-visibility: hidden;
-    perspective: 1000px;
-    border-radius: 50%;
-    transition: .4s transform;
-  }
-  
-  .slider-card-front {
-    background-color: #DC3535;
-  }
-  
-  .slider-card-back {
-    background-color: #379237;
-    transform: rotateY(180deg);
-  }
-  
-  input:checked ~ .slider-card .slider-card-back {
-    transform: rotateY(0);
-  }
-  
-  input:checked ~ .slider-card .slider-card-front {
-    transform: rotateY(-180deg);
-  }
-  
-  input:checked ~ .slider-card {
-    transform: translateX(1.5em);
-  }
-  
-  input:checked ~ .slider {
-    background-color: #9ed99c;
-  }
