--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,8 @@ body {
   font-weight: bolder;
   box-shadow: 0 2px 0 2px #000;
   width: 6rem;
-  margin-left: 18%;
+  margin-left: 10%;
+  margin-top: 4%;
   margin-bottom: 0;
 }
 
@@ -48,5 +49,12 @@ h1 {
     margin-bottom: -1rem;
     font-size: 0.9rem;
     width: 5.5rem;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  #create-task {
+    padding: 0.8em 0.5em;
+    margin-left: 1rem;
   }
 }
