--- a/src/styles/createtask.css
+++ b/src/styles/createtask.css
@@ -1,7 +1,7 @@
 label {
     font-size: 2rem;
     font-weight: bold;
-    color: rgba(127, 105, 96);
+    color: rgb(212, 180, 166);
     text-shadow: 2px 2px 2px black;
 }
 
@@ -9,17 +9,17 @@ label {
 input, textarea {
     border: solid 1.5px #9e9e9e;
     border-radius: 1rem;
-    background-color: rgba(148, 136, 120, 0.526);
+    background-color: rgba(148, 136, 120, 0.8);
     padding: 1rem;
     font-size: 1rem;
+    text-shadow: 1px 1px 1px rgb(80, 63, 63);
     color: #f5f5f5;
-    transition: border 150ms cubic-bezier(0.4,0,0.2,1);
    }
    
    
 input:focus, input:valid, textarea:focus, textarea:valid {
     outline: none;
-    border: 1.5px solid #1a73e8;
+    border: 2px solid #c38c32cd;
    }
 
 
@@ -39,19 +39,47 @@ input:focus, input:valid, textarea:focus, textarea:valid {
     cursor: pointer;
 }
 
-.add-task {
-    display: flex;
-    padding: 1.1em 1.1em;
-    background: none;
+.add-edit-button {
+    display: block;
+    width: 10rem;
+    height: 3rem;
     border: 2px solid rgb(212, 180, 166);
-    font-size: 0.95rem;
+    font-size: 1.5rem;
     color: #131313;
     cursor: pointer;
     border-radius: 12px;
     background-color: rgb(157, 130, 119);
     font-weight: bolder;
     box-shadow: 0 2px 0 2px #000;
-    width: 6rem;
-    margin-left: 50%;
-    margin-bottom: 0;
+    position: relative;
+    top: 2rem;
+    left: 45%;
+    padding: 0;
+    text-align: center;
 }
+
+.add-edit-button:active {
+    transform: translateY(0.08em);
+
+}
+
+@media only screen and (max-width: 1030px) {
+    .add-edit-button {
+        left: 40%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .add-edit-button {
+        left: 30%;
+    }
+
+    textarea {
+        max-width: 90%;
+    }
+
+    .back-home {
+        font-size: 1rem;
+    }
+}
+
