--- a/src/styles/todoitem.css
+++ b/src/styles/todoitem.css
@@ -20,59 +20,10 @@
 }
 
 
-.checkbox {
-  display: inline-flex;
-  cursor: pointer;
-  position: relative;
-  left: -5rem;
-  top: 1rem;
-  margin-right: 2rem;
-}
-
-.checkbox > span {
-  color: #34495E;
-  padding: 0.5rem 0.25rem;
-}
-
-.checkbox > input {
-  height: 25px;
-  width: 25px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -o-appearance: none;
-  appearance: none;
-  border: 2px solid #dbe1e794;
-  border-radius: 4px;
-  outline: none;
-  transition-duration: 0.3s;
-  background-color: #8c0a0acb;
-  cursor: pointer;
-}
-
-.checkbox > input:checked {
-  border: 1px solid #03ff29;
-  background-color: #345e356b;
-}
-
-.checkbox > input:checked + span::before {
-  content: '\2713';
-  font-weight:bolder;
-  font-size: 29px;
-  display: block;
-  text-align: center;
-  color: #03ff29;
-  position: absolute;
-  left: 0.4rem;
-  bottom: 0.05rem;
-}
-
-.checkbox > input:active {
-  border: 2px solid #34495E;
-}
 
 .todo {
   position: relative;
-  left: -6rem;
+  left: -3rem;
   text-align: left;
   font-size: 1rem;
 }
@@ -135,8 +86,87 @@
   right: -90%;
 }
 
-@media only screen and (max-width: 1300px) {
+
+
+#toggle {
+ display: block;
+ height: 20px;
+ width: 20px;
+ position: relative;
+ left: -4rem;
+ top: 2rem;
+ cursor: pointer;
+}
+
+#done {
+  position: relative;
+  left: -4rem;
+  top: 0;
+  color: greenyellow;
+  font-size: 1.6rem;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px black;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 680px) {
+  .task {
+    width: 100%;
+  }
+  .buttons {
+    position: relative;
+    right: -85%;
+  }
+
+  .button-60 {
+    right: 30%;
+  }
+  .todo {
+    width: 60%
+  }
+
+}
+
+@media only screen and (max-width: 460px) {
+  .button-60 {
+    right: 40%;
+    font-size: 11px;
+  }
+  .todo {
+    font-size: 11px;
+    width: 60%;
+    left: -2.5rem;
+  }
+
+  #toggle {
+    left: -3rem;
+  }
+
+  #done {
+    left: -3rem;
+  }
+
+}
+
+
+
+@media only screen and (min-width: 680px) and (max-width: 1400px) {
   .buttons {
     right: -85%;
   }
+
+  .todo {
+    font-size: 14px;
+    left: -1rem;
+    width: 70%
+  }
+
+  #toggle {
+    left: -2.5rem;
+  }
+
+  #done {
+    left: -2.5rem;
+  }
+
 }
